# CLog

./: .gitignore  .gitmodules  CMakeLists.txt  License.md  Main.cpp  Readme.md  main.cpp
Dependency/: CMakeLists.txt
Documentation/: Sequences.md
Include/: Log.h  Logger.h
Include/Levin/: ColoredLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp  Level.hpp  Levin.hpp  Log.h  Log.hpp  Logger.h  Logger.hpp  SecurityLevel.hpp  SeverityLevel.hpp  StreamLogger.hpp
Include/Levin/Format/: Flossy.hpp
Source/: ColoredLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  Log.cpp  Logger.cpp  StreamLogger.cpp
Source/PRIVATE/: ImplementationLog.cpp  ImplementationLog.h
Source/Private/: ImplementationLog.cpp  ImplementationLog.h
Test/: CMakeLists.txt  TestBasicLog.cpp  TestFilter.cpp
Test/Format/: CMakeLists.txt  TestFlossy.cpp
include/: log.h  logger.h
src/: log.cpp  log_impl.cpp  log_impl.h  logger.cpp
